# media-art-2025

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
